# library-metadata-lookup

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
core/: dependencies.py  exceptions.py  logging.py  matching.py  search.py  sentry.py  telemetry.py
discogs/: cache_service.py  lookup.py  memory_cache.py  models.py  ratelimit.py  router.py  service.py
docs/: library-metadata-lookup-technical-overview.md
lookup/: models.py  orchestrator.py  router.py
routers/: admin.py  health.py
services/: parser.py
tests/: conftest.py  factories.py
tests/integration/: conftest.py  test_alternate_artist.py  test_api_discogs.py  test_api_health.py  test_api_library.py  test_library_db.py  test_lookup_pipeline.py  test_memory_cache.py
tests/unit/: conftest.py  test_admin_router.py  test_cache_service.py  test_dependencies.py  test_discogs_lookup.py  test_discogs_router.py  test_discogs_service.py  test_exceptions.py  test_health_router.py  test_library_db.py  test_library_models.py  test_library_router.py  test_logging.py  test_lookup_router.py  test_main.py  test_matching.py  test_memory_cache.py  test_orchestrator.py  test_orchestrator_gaps.py  test_orchestrator_helpers.py  test_ratelimit.py  test_search.py  test_sentry.py  test_settings.py  test_telemetry.py
